@@ -1,5 +1,6 @@
 ggplot2 0.8.9 (2010-XX-XX) ----------------------------------------
 
+* mean_se: a new summary function to work with stat_summary that calculates mean and one standard error on either side (thanks to contribution from Kohske Takahashi)
 * stat_smooth: once again works if n > 1000 and SE = F (thanks to bug report from Theiry Onkelinx and fix from Kohske Takahashi)
 * stat_smooth: draw line if only 2 unique x values, not three as previously * guides: fixed #126
 * hcl: can now set c and l, and preserves names (thanks to suggestion by Richard Cotton)
